tests/rosetta/out/Rust/active-directory-connect.error
rustc error: exit status 1
error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldenactive-directory-connect1317788842/001/prog.rs:21:20
   |
21 |         if connect(&client.clone()) {
   |            ------- ^^^^^^^^^^^^^^^ expected `LDAPClient`, found `&LDAPClient`
   |            |
   |            arguments to this function are incorrect
   |
note: function defined here
  --> /tmp/TestMochiRustGoldenactive-directory-connect1317788842/001/prog.rs:16:8
   |
16 |     fn connect(client: LDAPClient) -> bool {
   |        ^^^^^^^ ------------------
help: consider removing the borrow
   |
21 -         if connect(&client.clone()) {
21 +         if connect(client.clone()) {
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
